--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Home</title>
 
-    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   </head>
