add styling to use fixed navbar

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
     <title>Home</title>
   </head>
+
   <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -36,18 +37,37 @@
       </div>
     </nav>
 
-    <section class="bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 order-2 order-lg-1">
-          <h1>Bootstrap 101 template</h1>
-          <p class="lead">Proident eu nisi commodo enim deserunt enim duis sunt nostrud anim. Sunt do sit enim veniam nostrud culpa adipisicing do ullamco occaecat et. </p>
-          <p><a href="#" class="btn btn-primary shadow mr-2">Discover More</a><a href="#" class="btn btn-outline-primary">Some another action</a></p>
-        </div>
-        <div class="col-lg-6 order-1 order-lg-2"><img src="img/macbook.png" alt="..." class="img-fluid"></div>
-      </div>
-    </div>
-  </section>
+    <h1>Home</h1>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam arcu elit, condimentum commodo mauris non, finibus suscipit massa. Mauris molestie sit amet nisi sed rhoncus. Duis consequat augue a enim vehicula eleifend. Pellentesque id consequat libero. Fusce laoreet maximus arcu vitae mattis. Vestibulum elementum fermentum enim, eu pharetra neque vehicula at. Ut sagittis tortor vel sapien dapibus fringilla. Nulla facilisi. Suspendisse lacinia dui eget eros commodo convallis. Suspendisse molestie tempor eleifend. Aenean consequat sem ut sodales sodales. Proin vitae dolor et sem semper venenatis eu at ipsum.
+    </p>
+    <p>
+    Donec lobortis eros augue, ullamcorper mollis augue scelerisque sed. Sed id sollicitudin neque. Sed maximus, risus at sollicitudin porttitor, mi augue mattis dui, non maximus orci magna ac leo. Suspendisse potenti. Integer nibh massa, malesuada sed arcu vel, posuere sagittis velit. Phasellus erat sapien, semper sit amet odio ut, posuere fermentum est. Morbi placerat tincidunt justo, viverra volutpat quam maximus eget.
+    </p>
+    <p>
+    Nullam sagittis est suscipit dolor euismod accumsan. Pellentesque lacinia, mi sed faucibus hendrerit, ante urna euismod mi, at interdum magna dolor vitae lectus. Donec libero nisl, vehicula eget imperdiet at, rhoncus vel libero. Donec semper lorem ipsum, sed volutpat justo pellentesque quis. Ut semper nunc nisi, in gravida nunc laoreet hendrerit. Suspendisse sit amet erat vitae ante vulputate efficitur vitae quis sapien. Proin bibendum ac diam in pretium. Vivamus efficitur, enim ut imperdiet congue, turpis dolor tincidunt ligula, in dapibus justo eros eu ipsum.
+    </p>
+    <p>
+    Duis ut commodo ante, vitae viverra leo. Duis iaculis quis mi vehicula maximus. Cras ornare, enim a facilisis faucibus, dui diam tristique purus, ut suscipit lacus diam nec massa. Ut massa nulla, feugiat a dapibus sit amet, sollicitudin non nulla. Suspendisse purus lorem, volutpat at ex vitae, mollis ornare purus. In eget nisi eu diam euismod fringilla eu non neque. Nulla eu metus ornare, efficitur diam nec, interdum libero. Vivamus placerat tempor sem, vel porttitor mi consequat vel. Fusce tincidunt neque vel erat suscipit porta. Ut nec varius nunc, vel vulputate augue. Vivamus porttitor massa et urna ultrices, eget accumsan turpis consequat. Sed molestie facilisis ante, in tempus lectus. Proin efficitur commodo gravida. Phasellus urna urna, vehicula a dui quis, eleifend pulvinar libero. Integer suscipit quam et consectetur condimentum.
+    </p>
+    <p>
+    In venenatis orci tincidunt egestas tincidunt. Pellentesque tincidunt risus non est commodo semper. Nam consequat nibh eget quam finibus, sit amet lacinia elit posuere. Proin nec mollis nunc. Praesent sagittis finibus urna eu vehicula. Aliquam erat volutpat. Fusce sit amet molestie velit. Curabitur a purus id orci tincidunt feugiat eget a tellus. Nulla facilisi. Sed placerat sapien tellus, sed luctus dui luctus at. Sed cursus magna orci, ut rhoncus nibh varius non. Curabitur eget efficitur nisi, a pellentesque diam. Curabitur nec lorem convallis, malesuada metus vel, dignissim odio. Sed dui odio, aliquet ut ultrices non, vulputate vel leo.
+    </p>
+    <p>
+    Duis ultricies, purus et egestas ullamcorper, ex arcu bibendum tortor, vel ultrices felis tellus eget justo. Nam eros libero, pellentesque vitae tortor sed, dignissim congue felis. Vivamus eu nulla at orci sollicitudin condimentum. Aliquam in erat ultricies, elementum leo vel, iaculis augue. Donec at dolor leo. Donec pharetra, turpis sed elementum viverra, ligula ipsum condimentum ex, eget gravida dui mi eu sapien. Praesent dignissim, dolor semper molestie molestie, quam diam finibus elit, quis sagittis risus magna ut dolor. Aliquam cursus mollis massa non tempor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+    </p>
+    <p>
+    Curabitur quis tristique tortor, nec vehicula sapien. Donec ac vehicula ex, non malesuada dolor. Mauris massa libero, auctor sed venenatis vitae, tempor a purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec id lobortis orci, at fermentum justo. Donec eleifend turpis ipsum, in placerat libero fringilla sed. Donec lacinia efficitur posuere. Nullam in orci nec odio elementum faucibus ut quis erat. Morbi aliquet odio sit amet interdum sollicitudin. Donec condimentum felis porttitor lacus tincidunt, id sagittis turpis sagittis. Curabitur laoreet posuere posuere. Donec scelerisque quis dui eget sagittis. Nunc a nisi quis purus facilisis ullamcorper vitae vitae magna.
+    </p>
+    <p>
+    Sed ac suscipit lorem. Suspendisse in efficitur orci. Quisque lectus est, blandit ac est vitae, congue ultricies metus. Nullam diam ligula, tempor et porta non, pellentesque id lorem. Ut vitae accumsan magna. Maecenas et eros consequat, tincidunt orci sit amet, tincidunt quam. Etiam sollicitudin convallis sagittis. Vestibulum laoreet odio ut quam placerat elementum. Integer imperdiet maximus euismod. Vestibulum et lectus aliquam, scelerisque odio a, lobortis magna. Nam posuere lacus faucibus ante pulvinar luctus. In urna ipsum, scelerisque a ex vitae, ultrices feugiat sem. Quisque blandit rutrum lacus non ultricies. Vestibulum sed tincidunt libero, porta iaculis lectus. Nunc viverra massa at nunc tincidunt finibus. Mauris sed elementum eros.
+    </p>
+    <p>
+    Quisque efficitur sapien a ligula fermentum lobortis. Donec mattis purus in ligula dictum porta. Phasellus non finibus nisl, eu faucibus ipsum. Maecenas cursus nisl leo, eu vestibulum est consectetur a. Sed placerat et ligula in dictum. Curabitur aliquet mauris vitae lectus fermentum, vitae mattis lorem gravida. Mauris euismod quam eu arcu iaculis, et euismod mauris viverra. Vivamus semper pulvinar nunc ut malesuada. Pellentesque consectetur vehicula sem vitae facilisis. Praesent in nisl lobortis, fermentum lorem eget, dapibus nunc. Donec tristique, mauris quis vestibulum mattis, velit odio posuere tortor, vel tincidunt metus dui id lacus.
+    </p>
+    <p>
+    Quisque vel elementum risus, non cursus ex. Quisque hendrerit tincidunt placerat. Vivamus quis aliquam eros. Donec egestas cursus felis vitae lacinia. Vestibulum scelerisque dictum neque, a interdum lacus accumsan quis. Nam venenatis turpis nec quam dictum cursus. Aenean laoreet, tortor at varius sagittis, massa ligula cursus massa, bibendum viverra leo risus nec odio. Duis ex nisi, vehicula eu velit quis, malesuada mattis ante. Fusce vel tincidunt enim. Nullam feugiat orci interdum sagittis vestibulum. Etiam posuere fermentum convallis. Nulla vulputate, nisi eu dignissim placerat, massa est varius lorem, sed euismod lacus orci in mauris. Quisque rutrum ante in congue finibus. Suspendisse molestie, est posuere lobortis aliquam, magna neque dapibus ligula, ut imperdiet ligula libero volutpat turpis. Pellentesque tempor, risus nec vulputate bibendum, diam tortor vestibulum nisl, ut pretium justo tellus vitae tortor. Pellentesque velit ex, tincidunt at felis eget, ullamcorper hendrerit risus.
+    </p>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
